added navbar position fixed

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,10 +5,11 @@
     align-items: center;
     justify-content: center;
     padding: 10px;
+    position: fixed;
+    width: 100%;
 }
 a{
     text-decoration: none;
     padding: 0 10px;
     color: #000;
-    
 }
